--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "devDependencies": {
-    "bootstrap": "^3.4.1"
+    "bootstrap": "^3.4.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4"
   }
 }
